--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "concurrently": "latest"
   },
   "dependencies": {
-    "@apollo/gateway": "latest",
-    "apollo-server": "latest",
+    "@apollo/gateway": "0.7.1",
+    "apollo-server": "^2.5.1-alpha.1",
     "graphql": "latest"
   }
 }
