--- a/services/inventory/server/docker-compose.yml
+++ b/services/inventory/server/docker-compose.yml
@@ -1,11 +1,10 @@
-# Auto-generated with: [./compose -a 1 -z 1 --port_offset=0]
+# Auto-generated with: [./compose -a 1 -z 1 --port_offset=0 --names=false]
 #
 version: "3.5"
 services:
   alpha1:
     # image: dgraph/dgraph:3642fed5
     image: dgraph/dgraph:master
-    container_name: alpha1
     working_dir: /data/alpha1
     labels:
       cluster: test
@@ -26,7 +25,6 @@ services:
   zero1:
     # image: dgraph/dgraph:3642fed5
     image: dgraph/dgraph:master
-    container_name: zero1
     working_dir: /data/zero1
     labels:
       cluster: test
