switch to master and omit running old inventory
Signed-off-by: Steve Coffman <steve@khanacademy.org>

--- a/services/inventory/server/docker-compose.yml
+++ b/services/inventory/server/docker-compose.yml
@@ -4,7 +4,7 @@ version: "3.5"
 services:
   alpha1:
     # master (a77939a1)
-    image: dgraph/dgraph:a77939a1
+    image: dgraph/dgraph:master
     working_dir: /data/alpha1
     labels:
       cluster: test
@@ -23,7 +23,7 @@ services:
         limits:
           memory: 32G
   zero1:
-    image: dgraph/dgraph:a77939a1
+    image: dgraph/dgraph:master
     working_dir: /data/zero1
     labels:
       cluster: test
