--- a/services/inventory/server/docker-compose.yml
+++ b/services/inventory/server/docker-compose.yml
@@ -4,18 +4,12 @@ version: "3.5"
 services:
   alpha1:
     # master (a77939a1)
-    image: dgraph/dgraph:master
+    image: dgraph/dgraph:8e835f11
     working_dir: /data/alpha1
     labels:
       cluster: test
     ports:
     - 8080:8080
-    #- 9080:9080
-    volumes:
-    - type: bind
-      source: $GOPATH/bin
-      target: /gobin
-      read_only: true
     command: dgraph alpha --my=alpha1:7080 --zero=zero1:5080 --logtostderr
       -v=2 --raft='idx=1; group=1' --security='whitelist=10.0.0.0/8,172.16.0.0/12,192.168.0.0/16' --graphql='debug=true'
     deploy:
@@ -23,18 +17,10 @@ services:
         limits:
           memory: 32G
   zero1:
-    image: dgraph/dgraph:master
+    image: dgraph/dgraph:8e835f11
     working_dir: /data/zero1
     labels:
       cluster: test
-    #ports:
-    #- 5080:5080
-    #- 6080:6080
-    volumes:
-    - type: bind
-      source: $GOPATH/bin
-      target: /gobin
-      read_only: true
     command: dgraph zero --raft='idx=1' --my=zero1:5080 --logtostderr -v=2 --bindall
     deploy:
       resources:
