dgraph: Use local Dgraph version that supports lambda.

--- a/services/inventory/server/docker-compose.yml
+++ b/services/inventory/server/docker-compose.yml
@@ -1,19 +1,45 @@
-# Auto-generated with: [./compose -a 1 -z 1 --port_offset=0 --names=false]
+# Auto-generated with: [compose -a 1 -z 1 --port_offset=0 --names=false --local=true]
 #
 version: "3.5"
 services:
   alpha1:
-    # master (a77939a1)
-    image: dgraph/dgraph:8e835f11
+    image: dgraph/dgraph:latest
     working_dir: /data/alpha1
+    labels:
+      cluster: test
     ports:
     - 8080:8080
-    command: dgraph alpha --my=alpha1:7080 --zero=zero1:5080 --logtostderr
-      -v=4 --raft='idx=1; group=1' --security='whitelist=10.0.0.0/8,172.16.0.0/12,192.168.0.0/16' --graphql='debug=true; lambda-url=http://lambda:8686/graphql-worker'
+    - 9080:9080
+    volumes:
+    - type: bind
+      source: $GOPATH/bin
+      target: /gobin
+      read_only: true
+    command: /gobin/dgraph alpha --my=alpha1:7080 --zero=zero1:5080 --logtostderr
+      -v=2 --raft "idx=1; group=1" --security "whitelist=10.0.0.0/8,172.16.0.0/12,192.168.0.0/16;" --graphql='debug=true; lambda-url=http://lambda:8686/graphql-worker'
+    deploy:
+      resources:
+        limits:
+          memory: 32G
   zero1:
-    image: dgraph/dgraph:8e835f11
+    image: dgraph/dgraph:latest
     working_dir: /data/zero1
-    command: dgraph zero --raft='idx=1' --my=zero1:5080 --logtostderr -v=2 --bindall
+    labels:
+      cluster: test
+    ports:
+    - 5080:5080
+    - 6080:6080
+    volumes:
+    - type: bind
+      source: $GOPATH/bin
+      target: /gobin
+      read_only: true
+    command: /gobin/dgraph zero --raft='idx=1' --my=zero1:5080 --logtostderr -v=2
+      --bindall
+    deploy:
+      resources:
+        limits:
+          memory: 32G
   lambda:
     image: dgraph/dgraph-lambda:latest
     depends_on:
