--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,6 +30,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: services/inventory
+          context: .
+          file: services/inventory/Dockerfile
           push: true
           tags: dbraley/inventory:latest
