Adjust build-push-action tag

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,4 +33,4 @@ jobs:
           context: .
           file: ./services/inventory/Dockerfile
           push: true
-          tags: dbraley/inventory:latest
+          tags: davidbraley/inventory:latest
