--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,11 +21,12 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       -
-        name: Login to DockerHub
+        name: Login to GCR
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: gcr.io
+          username: _json_key
+          password: ${{ secrets.GCR_JSON_KEY }}
       -
         name: Build and push
         uses: docker/build-push-action@v2
@@ -33,4 +34,4 @@ jobs:
           context: .
           file: ./services/inventory/Dockerfile
           push: true
-          tags: davidbraley/inventory:latest
+          tags: us.gcr.io/khan-academy/services/inventory-test:latest
