--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,9 +24,8 @@ jobs:
         name: Login to GCR
         uses: docker/login-action@v1
         with:
-          registry: gcr.io
-          username: _json_key
-          password: ${{ secrets.GCR_JSON_KEY }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Build and push
         uses: docker/build-push-action@v2
@@ -34,4 +33,4 @@ jobs:
           context: .
           file: ./services/inventory/Dockerfile
           push: true
-          tags: us.gcr.io/khan-academy/services/inventory-test:latest
+          tags: davidbraley/inventory:latest
