HaHA!!! Now with even more !!!

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,7 +3,8 @@ name: ci
 on:
   push:
     branches:
-      - 'main'
+      - 'try-a-thing'
+      # - 'main'
     paths:
       - 'pkg/**'
       - 'services/inventory/**'
