--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - 'try-a-thing'
-      # - 'main'
+      - 'main'
     paths:
       - 'pkg/**'
       - 'services/inventory/**'
